--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-These files are the one used by me on various systems. I make no guarantees
+These files are the ones used by me on various systems. I make no guarantees
 that these files aren't broken or evil. You should really check that yourself
 before trying them out.
